syntax = "proto3";

package vod.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "vod/v1;v1";

service VODService {
  rpc ListVODs(google.protobuf.Empty) returns (ListVODsResponse) {
    option (google.api.http) = {get: "/api/v1/vods"};
  }
}

message ListVODsResponse {
  message VOD {
    int64 id = 1;
    string name = 2;
    string username = 3;
    google.protobuf.Timestamp created_at = 4;
  }
  repeated VOD results = 1;
}